docs: add Javadoc for authentication and account classes